Ajouts de commentaires, résolutions de la fonction liée à la détermination du vainqueur. Pas d'exceptions.